crates/ruff_python_parser/tests/snapshots/simple_tokenizer__identifier_ending_in_non_start_char.snap
---
source: crates/ruff_python_parser/tests/simple_tokenizer.rs
expression: test_case.tokens()
---
[
    SimpleToken {
        kind: Name,
        range: 0..2,
    },
]
