crates/ruff_python_parser/tests/snapshots/simple_tokenizer__ignore_word_with_only_id_continuing_chars.snap
---
source: crates/ruff_python_parser/tests/simple_tokenizer.rs
expression: test_case.tokens()
---
[
    SimpleToken {
        kind: Other,
        range: 0..1,
    },
    SimpleToken {
        kind: Bogus,
        range: 1..3,
    },
]
