crates/ruff_python_parser/tests/snapshots/simple_tokenizer__single_quoted_multiline_string_containing_comment.snap
---
source: crates/ruff_python_parser/tests/simple_tokenizer.rs
expression: test_case.tokenize_reverse()
---
[
    SimpleToken {
        kind: Other,
        range: 76..77,
    },
    SimpleToken {
        kind: Bogus,
        range: 0..76,
    },
]
