crates/ruff_python_parser/tests/snapshots/simple_tokenizer__single_quoted_multiline_string_implicit_concatenation.snap
---
source: crates/ruff_python_parser/tests/simple_tokenizer.rs
expression: test_case.tokenize_reverse()
---
[
    SimpleToken {
        kind: Other,
        range: 78..79,
    },
    SimpleToken {
        kind: Bogus,
        range: 0..78,
    },
]
