crates/ruff_python_parser/tests/snapshots/simple_tokenizer__string_with_byte_kind.snap
---
source: crates/ruff_python_parser/tests/simple_tokenizer.rs
expression: test_case.tokens()
---
[
    SimpleToken {
        kind: Other,
        range: 0..2,
    },
    SimpleToken {
        kind: Bogus,
        range: 2..7,
    },
]
